--- a/src/components/reactorStarter/ReactorStarter.css
+++ b/src/components/reactorStarter/ReactorStarter.css
@@ -36,3 +36,10 @@
     justify-content: center;
     align-items: center;
 }
+
+.number-victories{
+    position: fixed;
+    top: 50px;
+    right: 10px;
+    font-size: 1.5rem;
+}
