--- a/src/components/reactorStarter/ReactorStarter.css
+++ b/src/components/reactorStarter/ReactorStarter.css
@@ -1,14 +1,18 @@
 .start-button{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
     background-color: rgb(34, 161, 30);
     cursor: pointer;
-    font-weight: bold;
     outline: none;
     margin-bottom: 20px;
     border-radius: 100px;
     border: none;
-    width: 300px;
-    padding: 20px;
     color: white;
+}
+
+.btn-disabled .power-icon{
+    color: rgba(255, 255, 255, 0.582);
 }
 
 .btn-disabled{
