--- a/src/components/baseReactorInput/BaseReactorInput.css
+++ b/src/components/baseReactorInput/BaseReactorInput.css
@@ -16,3 +16,17 @@
     grid-template-columns: 0.8fr 0.8fr 0.8fr;
     grid-template-rows: 0.8fr 0.8fr 0.8fr;
 }
+
+@media (min-width: 481px) and (max-width: 767px) {
+    .input-container{
+        width: 200px;
+        height: 200px;
+    }
+}
+  
+@media (min-width: 320px) and (max-width: 480px) {
+    .input-container{
+        width: 200px;
+        height: 200px;
+    }
+}
